<resources>
    <string name="app_name">LeChat</string>
    <string name="text1">乐聊,不亦乐乎</string>
    <string name="img1">splash</string>
    <string name="textmain">" 已登录"</string>
    <string name="textLogin">请登录</string>
    <string name="username">" 用户名"</string>
    <string name="pwd">密码</string>
    <string name="input_nmae">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登录</string>
    <string name="nickname">昵称</string>
    <string name="hobbit">爱好</string>
    <string name="edit_nickname">请输入昵称</string>
    <string name="edit_hobbit">请输入爱好</string>
    <string name="main_user">动态</string>
    <string name="huihua">会话</string>
    <string name="main_users">联系人</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
